Add GameAPI doc
