# server/build/classes/java/main/openapi-plugin/openapi.json
@@ -5,6 +5,223 @@
     "version": ""
   },
   "paths": {
+    "/hangman/v0.1.0/games/{lobbyId}": {
+      "post": {
+        "tags": [
+          "games"
+        ],
+        "description": "Start a new game",
+        "operationId": "GameApi::startGame",
+        "parameters": [
+          {
+            "name": "lobbyId",
+            "in": "path",
+            "description": "The id of the lobby where to start the game",
+            "required": true,
+            "deprecated": false,
+            "allowEmptyValue": false,
+            "schema": {
+              "type": "string"
+            }
+          }
+        ],
+        "requestBody": {
+          "description": "The new game to put in the lobby",
+          "content": {
+            "application/json": {
+              "schema": {
+                "$ref": "#/components/schemas/Game"
+              }
+            }
+          },
+          "required": true
+        },
+        "responses": {
+          "200": {
+            "description": "The provided id corresponds to a lobby, the game is now started and associated to the lobby, nothing is returned."
+          },
+          "404": {
+            "description": "Not found: the provided id corresponds to not existing lobby"
+          }
+        },
+        "deprecated": false,
+        "security": []
+      },
+      "put": {
+        "tags": [
+          "games"
+        ],
+        "description": "Set the word to guess, given the id of the game\u0027s lobby",
+        "operationId": "GameApi::setWordToGuess",
+        "parameters": [
+          {
+            "name": "lobbyId",
+            "in": "path",
+            "description": "Id of the lobby",
+            "required": true,
+            "deprecated": false,
+            "allowEmptyValue": false,
+            "schema": {
+              "type": "string"
+            }
+          }
+        ],
+        "requestBody": {
+          "description": "The word to guess",
+          "content": {
+            "application/json": {
+              "schema": {
+                "type": "string"
+              }
+            }
+          },
+          "required": true
+        },
+        "responses": {
+          "200": {
+            "description": "The provided id corresponds to a lobby, the word is set, and it\u0027s encoded version is returned",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "type": "string"
+                }
+              }
+            }
+          },
+          "404": {
+            "description": "Not found: the provided id corresponds to not existing lobby"
+          }
+        },
+        "deprecated": false,
+        "security": []
+      }
+    },
+    "/hangman/v0.1.0/lobbies/{lobbyId}": {
+      "get": {
+        "tags": [
+          "lobbies"
+        ],
+        "description": "Put the user corresponding to the nickname passed, in the lobby corresponding to the id passed.",
+        "operationId": "LobbyApi::addUserToLobby",
+        "parameters": [
+          {
+            "name": "lobbyId",
+            "in": "path",
+            "description": "Id of the lobby",
+            "required": true,
+            "deprecated": false,
+            "allowEmptyValue": false,
+            "schema": {
+              "type": "string"
+            }
+          }
+        ],
+        "requestBody": {
+          "description": "The user\u0027s nickname",
+          "content": {
+            "application/json": {
+              "schema": {
+                "type": "string"
+              }
+            }
+          },
+          "required": true
+        },
+        "responses": {
+          "200": {
+            "description": "The provided id corresponds to a lobby, the user is now connected to the lobby, nothing is returned"
+          },
+          "404": {
+            "description": "Not found: the provided id corresponds to not existing lobby"
+          },
+          "409": {
+            "description": "Conflict: the lobby is full"
+          }
+        },
+        "deprecated": false,
+        "security": []
+      },
+      "delete": {
+        "tags": [
+          "lobbies"
+        ],
+        "description": "Deletes a lobby, given it\u0027s id",
+        "operationId": "LobbyApi::deleteLobby",
+        "parameters": [
+          {
+            "name": "lobbyId",
+            "in": "path",
+            "description": "The id of the lobby to remove",
+            "required": true,
+            "deprecated": false,
+            "allowEmptyValue": false,
+            "schema": {
+              "type": "string"
+            }
+          }
+        ],
+        "responses": {
+          "201": {
+            "description": "The provided id corresponds to a lobby, which is thus removed. Nothing is returned"
+          },
+          "404": {
+            "description": "Not found: the provided id corresponds to not existing lobby"
+          }
+        },
+        "deprecated": false,
+        "security": []
+      }
+    },
+    "/hangman/v0.1.0/games/attempt/{lobbyId}": {
+      "put": {
+        "tags": [
+          "games"
+        ],
+        "description": "Try an attept to guess the word, given the game\u0027s lobby id",
+        "operationId": "GameApi::setWordToGuess",
+        "parameters": [
+          {
+            "name": "lobbyId",
+            "in": "path",
+            "description": "Id of the lobby",
+            "required": true,
+            "deprecated": false,
+            "allowEmptyValue": false,
+            "schema": {
+              "type": "string"
+            }
+          }
+        ],
+        "requestBody": {
+          "description": "The attempt",
+          "content": {
+            "application/json": {
+              "schema": {
+                "type": "string"
+              }
+            }
+          },
+          "required": true
+        },
+        "responses": {
+          "200": {
+            "description": "The provided id corresponds to a lobby, the attempt is tried and the result of the attempt is returned",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "type": "boolean"
+                }
+              }
+            }
+          },
+          "404": {
+            "description": "Not found: the provided id corresponds to not existing lobby"
+          }
+        },
+        "deprecated": false,
+        "security": []
+      }
+    },
     "/hangman/v0.1.0/lobbies": {
       "post": {
         "tags": [
@@ -62,82 +279,6 @@
                 }
               }
             }
-          }
-        },
-        "deprecated": false,
-        "security": []
-      }
-    },
-    "/hangman/v0.1.0/lobbies/{lobbyId}": {
-      "delete": {
-        "tags": [
-          "lobbies"
-        ],
-        "description": "Deletes a lobby, given it\u0027s id",
-        "operationId": "LobbyApi::deleteLobby",
-        "parameters": [
-          {
-            "name": "lobbyId",
-            "in": "path",
-            "description": "The id of the lobby to remove",
-            "required": true,
-            "deprecated": false,
-            "allowEmptyValue": false,
-            "schema": {
-              "type": "string"
-            }
-          }
-        ],
-        "responses": {
-          "201": {
-            "description": "The provided id corresponds to a lobby, which is thus removed. Nothing is returned"
-          },
-          "404": {
-            "description": "Not found: the provided id corresponds to not existing lobby"
-          }
-        },
-        "deprecated": false,
-        "security": []
-      },
-      "get": {
-        "tags": [
-          "lobbies"
-        ],
-        "description": "Put the user corresponding to the nickname passed, in the lobby corresponding to the id passed.",
-        "operationId": "LobbyApi::addUserToLobby",
-        "parameters": [
-          {
-            "name": "lobbyId",
-            "in": "path",
-            "description": "Id of the lobby",
-            "required": true,
-            "deprecated": false,
-            "allowEmptyValue": false,
-            "schema": {
-              "type": "string"
-            }
-          }
-        ],
-        "requestBody": {
-          "description": "The user\u0027s nickname",
-          "content": {
-            "application/json": {
-              "schema": {
-                "type": "string"
-              }
-            }
-          },
-          "required": true
-        },
-        "responses": {
-          "200": {
-            "description": "The provided id corresponds to a lobby, the user is now connected to the lobby, nothing is returned"
-          },
-          "404": {
-            "description": "Not found: the provided id corresponds to not existing lobby"
-          },
-          "409": {
-            "description": "Conflict: the lobby is full"
           }
         },
         "deprecated": false,
@@ -250,52 +391,6 @@
   },
   "components": {
     "schemas": {
-      "Lobby": {
-        "type": "object",
-        "properties": {
-          "full": {
-            "type": "boolean"
-          },
-          "users": {
-            "type": "array",
-            "items": {
-              "$ref": "#/components/schemas/User"
-            }
-          },
-          "id": {
-            "type": "integer",
-            "format": "int32"
-          },
-          "connectedUserNumber": {
-            "type": "integer",
-            "format": "int32"
-          },
-          "game": {
-            "$ref": "#/components/schemas/Game"
-          }
-        },
-        "required": [
-          "full",
-          "id",
-          "connectedUserNumber"
-        ]
-      },
-      "User": {
-        "type": "object",
-        "properties": {
-          "nickName": {
-            "type": "string"
-          },
-          "gameRole": {
-            "type": "string",
-            "enum": [
-              "NOT_IN_GAME",
-              "CHOOSER",
-              "GUESSER"
-            ]
-          }
-        }
-      },
       "Game": {
         "type": "object",
         "properties": {
@@ -348,6 +443,52 @@
           "neededExtraRound",
           "gameFinished"
         ]
+      },
+      "Lobby": {
+        "type": "object",
+        "properties": {
+          "full": {
+            "type": "boolean"
+          },
+          "users": {
+            "type": "array",
+            "items": {
+              "$ref": "#/components/schemas/User"
+            }
+          },
+          "id": {
+            "type": "integer",
+            "format": "int32"
+          },
+          "connectedUserNumber": {
+            "type": "integer",
+            "format": "int32"
+          },
+          "game": {
+            "$ref": "#/components/schemas/Game"
+          }
+        },
+        "required": [
+          "full",
+          "id",
+          "connectedUserNumber"
+        ]
+      },
+      "User": {
+        "type": "object",
+        "properties": {
+          "nickName": {
+            "type": "string"
+          },
+          "gameRole": {
+            "type": "string",
+            "enum": [
+              "NOT_IN_GAME",
+              "CHOOSER",
+              "GUESSER"
+            ]
+          }
+        }
       }
     }
   }
